<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.programs.lala.myschool.Login"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="287dp"
        android:layout_height="193dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/dimen_10"
        app:layout_constraintVertical_bias="0.54"
        android:gravity="center_vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.53"
            android:text="@string/login_error"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:visibility="invisible"/>

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"

            android:inputType="textEmailAddress"
            android:background="@color/white"
            android:hint="@string/email"
            android:layout_weight="0.53" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:background="@color/white"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_weight="0.47"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/logiBbutton"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:text="@string/login"
            android:gravity="center"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/registerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
