<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="6"
    android:elevation="@dimen/post_elevation"
    android:background="@color/recive_message"
    android:layout_margin="@dimen/dimen_10"
    android:padding="@dimen/dimen_5">

    <ImageView
        android:id="@+id/personImage"
        android:layout_width="0dp"

        android:layout_height="@dimen/dimen_100"
        android:layout_weight="1.5"
        app:srcCompat="@drawable/ic_account_circle_white_24dp"
        android:contentDescription="@string/personImage"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:layout_marginLeft="@dimen/dimen_10"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/accountName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/master_name"
            android:fontFamily="sans-serif"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/accountJob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/master_job"
            android:fontFamily="sans-serif-light" />
    </LinearLayout>

</LinearLayout>