<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_blue"
    android:layout_marginBottom="@dimen/dimen_5"
    android:layout_marginLeft="@dimen/dimen_5"
    android:layout_marginRight="@dimen/dimen_5"
    android:layout_marginTop="@dimen/dimen_5"
    android:elevation="@dimen/app_bar_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6">

        <ImageView
            android:id="@+id/messageImge"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_50"
            android:layout_weight="1.5"
            android:background="@drawable/ic_account_circle_white_24dp"
            android:contentDescription="@string/messageImge"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/dimen_10"

            >

            <TextView
                android:id="@+id/sendeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:maxLines="1"
                android:text="@string/master_name"
                android:fontFamily="sans-serif"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lastMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/hello"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/recive_message" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>